Changed from jdk21 to jdk11 in pom.xml